<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SetTheGoal</string>
    <string name="for_family">For family</string>
    <string name="for_myself">For myself</string>
    <string name="mini_motivation">Sometimes we should do difficult, boring but required tasks which you don\'t like. However, these tasks make sense when they become an instrument of getting a new goal.</string>
    <string name="good_quote">Good quote</string>
    <string name="quote_with_author">%1$s\n\nAuthor %2$s</string>
    <string name="i_want_to">I want to %1$s</string>
    <string name="getting_motivation">\nGetting motivation…</string>
    <string name="create_a_goal_for_family">Create a goal for family</string>
    <string name="create_my_goal">Create my goal</string>
    <string name="write_your_goal_here">Write your goal right here</string>
    <string name="s_car">buy a car</string>
    <string name="s_save_money">save money</string>
    <string name="s_clothes">buy new clothes</string>
    <string name="s_apartment">buy an apartment</string>
    <string name="s_books">give a book as a gift</string>
    <string name="s_learn_spanish">learn one lvl of Spanish</string>
    <string name="s_food">eat only healthy food</string>
    <string name="s_tennis">learn to play tennis</string>
    <string name="s_get_a_promotion">get a promotion</string>
    <string name="s_watch_movies">watch movies in the original version</string>
    <string name="s_go_abroad">go abroad</string>
    <string name="s_analyze_competitors">analyze competitors</string>
    <string name="s_learn_a_song">learn a song</string>
    <string name="s_swim_one_km">swim one mile</string>
    <string name="s_exclude_sugar">exclude sugar</string>
    <string name="s_buy_a_dumbbells_for_home">buy a dumbbells for home</string>
    <string name="s_work_for_yourself">work for yourself</string>
    <string name="s_cut_costs">cut costs</string>
    <string name="s_make_a_public_speech">make a public speech</string>
    <string name="s_find_your_soulmate">find my soulmate</string>
    <string name="s_simplify_my_life">simplify my life</string>
    <string name="s_throw_away_useless_things">throw away useless things</string>
    <string name="s_go_to_unexpected_journey">go to unexpected journey</string>
    <string name="s_read_business_book">read business book</string>
    <string name="s_get_driver_license">get driver license</string>
    <string name="s_learn_English">learn one lvl of English</string>
    <string name="s_paint_picture">paint a picture</string>
    <string name="s_learn_to_play_drums">learn to play drums</string>
    <string name="s_make_an_origami">make an origami</string>
    <string name="s_give_up_a_bad_habit">give up a bad habit</string>
    <string name="suggestions">Suggestions</string>
    <string name="next">Next</string>
    <string name="previous">Prev</string>
    <string name="done">Done</string>
    <string name="select_one_word">Select one word\nwhich describes your goal</string>
    <string name="inspiration_source_unsplash_com">Inspiration source is Unsplash.com</string>
    <string name="unsplash_url"><![CDATA[https://unsplash.com/?utm_source=SetTheGoal&utm_medium=referral]]></string>
    <string name="found_nothing">Found nothing</string>
    <string name="find_another_pictures">Find another pictures?</string>
    <string name="inspiration_source">Inspiration source is</string>
    <string name="unsplash_com">Unsplash.com</string>
    <string name="select_photo">Select photo\nwhich describes your goal</string>
    <string name="one_week">One week</string>
    <string name="one_month">One month</string>
    <string name="three_months">Three months</string>
    <string name="six_months">Six months</string>
    <string name="one_year">One year</string>
    <string name="how_much_time_do_you_need">How much time do you need to achieve this goal?</string>
    <string name="mae_bicycle">Go and achieve your goal!</string>
    <string name="mae_meditation">You are amazing! Relax, think and move forward!</string>
    <string name="mae_fruits">You are terrific! Eat some fruit to recharge yourself for achieving the goal!</string>
    <string name="mae_coffee">Drink some coffee because you are awesome! However, you shouldn\'t forget about the objective!</string>
    <string name="mae_music">You are breathtaking! Listen to your favorite music and start to pursue the goal right now!</string>
    <string name="mae_croissant">You are incredible! Grab a bite and pursue the objective!</string>
    <string name="mae_bear">This bear completely approves your objective! Well done!</string>
    <string name="str_with_dot">%1$d.</string>
    <string name="write_a_few_sub_goals">Write a few sub-goals</string>
    <string name="add_sub_goal">Add sub-goal</string>
    <string name="congratulation_your_goal_is_ready">Congratulation!\nYour goal is ready!</string>
    <string name="goals_for_my_family">For family</string>
    <string name="auth_as">Auth with</string>
    <string name="google">google</string>
    <string name="or_be">or be</string>
    <string name="incognito">Incognito</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="auth_wasnt_successful">Authentication wasn\'t successful</string>
    <string name="acc_is_null">Auth is failed. Account is null.</string>
    <string name="attempt_to_get_acc_failed">Attempt to get account was failed. Error code is %1$d</string>
    <string name="auth_as_incognito_is_failed">Auth as incognito is failed.</string>
    <string name="looks_like_you_were_here_under_google">Looks like you were here as %1$s\nYou can sign out from old account\nand sign in as a new user.</string>
    <string name="sign_out_from_old_account">Sign out from old account</string>
    <string name="signed_out_successfully">Signed out successfully.</string>
    <string name="signed_out_error">Signed out error.</string>
    <string name="become_a_real_user">Become a real user</string>
    <string name="sign_out">Sign out</string>
    <string name="you_are_signed_in_as">You are signed in as</string>
    <string name="linking_account_was_failed">Linking account was failed.</string>
    <string name="save">Save</string>
    <string name="you_are_offline">You are offline</string>
    <string name="sub_goals_done">Sub goals done: %1$d/%2$d</string>
    <string name="close">Close</string>
    <string name="goals_for_myself">For myself</string>
    <string name="sub_goal_text">fill a sub-goal</string>
    <string name="your_goal">Your goal</string>
    <string name="did_it">Did it!</string>
    <string name="achieved_tab_title">Achieved</string>
    <string name="undo">Undo</string>
    <string name="do_you_want_to_delete">Are you sure you want to Delete it?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="for_whom_do_you_want">For whom do you want to achieve the objective?</string>
    <string name="tap_to_change_your_life">Tap to change your life</string>
    <string name="how_often_can_i_send_you_a_notification">How often can I send you a notification about the goal?</string>
    <string name="once_a_day">1 day</string>
    <string name="once_every_three_days">3 days</string>
    <string name="once_every_week">1 week</string>
    <string name="once_every_month">1 month</string>
    <string name="once_every_two_months">2 months</string>
    <string name="once_every">Once every:</string>
    <string name="once_every_without_colon">Once every</string>
    <string name="you_will_be_notified">you will be notified</string>
    <string name="and_others">and others…</string>
    <string name="got_it">Got it</string>
    <string name="see_next_goal">See next goal</string>
    <string name="these_goals_are_for_today">These goals are for today</string>
    <string name="welcome_to">Welcome to </string>
    <string name="set">Set&#160;</string>
    <string name="stop_flying_aimlessly">Stop flying aimlessly.</string>
    <string name="start_moving">Start moving towards the goal.</string>
    <string name="let_s_go">let\'s go</string>
    <string name="goal">goal&#160;</string>
    <string name="yeah">Yeah</string>
    <string name="good">Good</string>
    <string name="absolutely">Absolutely</string>
    <string name="agreed">Agreed</string>
    <string name="all_right">All right</string>
    <string name="exactly">Exactly</string>
    <string name="yep">Yep</string>
    <string name="sure">Sure</string>
    <string name="of_course">Of course</string>
    <string name="the">the&#160;</string>
    <string name="start">Start</string>
    <string name="opportunities">Here\'s opportunities of the app.</string>
    <string name="endeavor">It is crucial to figure out for whom you will be endeavor.</string>
    <string name="for_family_or_for_yourself">Therefore, I\'ve made two categories: for Yourself and for your Family.</string>
    <string name="app_sends_smart_notification">App sends smart notification about each goal.</string>
    <string name="interval_notification">While creating a goal you choose appropriate interval between getting a notification.</string>
    <string name="works_offline">Moreover, the app works offline.</string>
    <string name="anywhere">Create. See. Remember. All your goals. Anywhere.</string>
    <string name="opportunities_img" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/opportunities.jpg?alt=media&token=ee83a362-9002-4b32-a955-2f1cf9db1c00]]></string>
    <string name="endeavor_img" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/endeavor.jpg?alt=media&token=131ab1f9-d438-46bc-913e-05fc8021cc7e]]></string>
    <string name="for_family_or_for_yourself_img" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/family.jpg?alt=media&token=56dea43a-44ff-4ea3-8651-9dfbfa969ff4]]></string>
    <string name="app_sends_smart_notification_img"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/notification.jpg?alt=media&token=030017aa-95ff-470e-962e-a551ffe5f302]]></string>
    <string name="interval_notification_img"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/interval.jpg?alt=media&token=6db24280-bd4c-4fcd-891e-fe609cf8e182]]></string>
    <string name="works_offline_img" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/moreover.jpg?alt=media&token=8e13b706-549a-422d-85ee-d034809b43de]]></string>
    <string name="anywhere_img" tools:ignore="TypographyDashes"><![CDATA[https://firebasestorage.googleapis.com/v0/b/setthegoal-e51b7.appspot.com/o/anywhere.jpg?alt=media&token=34ac89a9-90e4-4df7-ac97-873cd86e621b]]></string>
    <string name="do_you_want_to_sign_out_incognito">You are incognito. Therefore, if you sign out, all your data will be lost!!!</string>
    <string name="do_you_want_to_sign_out">Do you want to sign out?</string>
    <string name="close_it">Close?</string>
    <string name="if_you_close">If you close it, all filled data will be lost.</string>
    <string name="made_with_love_by_yuriy_getsko">Made with love by Yuriy Getsko.\nApp version:%1$s</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="google_sign_in_error">Google Sigh In was cancelled. Try incognito login.</string>
    <plurals name="goals_for_notification_plurals">
        <item quantity="one">Don\'t forget about your goal</item>
        <item quantity="other">Don\'t forget about your goals</item>
    </plurals>
</resources>