<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/svWords"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/tvWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            tools:text="Label" />
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGotIt"
        style="?materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/got_it"
        android:theme="@style/AppTheme.Yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/StyleCornerOutlinedButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSeeOthers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/see_next_goal"
        android:theme="@style/AppTheme.Yellow"

        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/btnGotIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/StyleCornerOutlinedButton" />

    <TextView
        android:id="@+id/tvThisIsTheEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:text="@string/these_goals_are_for_today"
        android:textColor="@color/colorText"
        android:textSize="18sp"

        android:visibility="gone"

        app:layout_constraintBottom_toTopOf="@+id/btnGotIt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>