<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/suggestions"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilGoal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSuggestions"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/item_suggestion"
        tools:orientation="horizontal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNextSecondary"
        style="?materialButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilGoal"
        app:shapeAppearance="@style/StyleCornerOutlinedButton"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_your_goal_here"
        app:counterEnabled="false"
        app:counterMaxLength="300"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/StyleCreateGoalEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorLight"
            android:fontFamily="sans-serif-medium"
            android:maxLength="300"
            android:maxLines="5"
            android:minHeight="175dp"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="22sp"
            app:shapeAppearance="@style/StyleCreateGoalEditText" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>